--- a/2.8. 与C进行交互.ipynb
+++ b/2.8. 与C进行交互.ipynb
@@ -2,9 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **作者**:\tValentin Haenel\n",
+    "\n",
+    "本章包含了许多可以在Python使用原生代码（主要是C/C++）方式的*介绍*，这个过程通常被称为*封装*。本章的目的是给你有哪些技术存在已经各自有优劣式的一点儿感觉，这样你可以根据你的具体需求选择适合的方式。无论如何，只要你开始做封装，你几乎都必然需要咨询你选定技术的文档。\n",
+    "\n",
+    "---\n",
+    "章节内容\n",
+    "\n",
+    "    简介\n",
+    "    Python-C-Api\n",
+    "    Ctypes\n",
+    "    SWIG\n",
+    "    Cython\n",
+    "    总结\n",
+    "    进一步阅读和参考\n",
+    "    练习\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2.8.1 简介\n",
+    "\n",
+    "本章将涵盖一下技术：\n",
+    "\n",
+    "- Python-C-Api\n",
+    "- Ctypes\n",
+    "- SWIG (简化封装器和接口生成器)\n",
+    "- Cython\n",
+    "\n",
+    "These four techniques are perhaps the most well known ones, of which Cython is probably the most advanced one and the one you should consider using first. The others are also important, if you want to understand the wrapping problem from different angles. Having said that, there are other alternatives out there, but having understood the basics of the ones above, you will be in a position to evaluate the technique of your choice to see if it fits your needs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -26,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
