--- a/3.3. Scikit-image：图像处理.ipynb
+++ b/3.3. Scikit-image：图像处理.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -413,8 +413,106 @@
     "\n",
     "在[skimage](http://scikit-image.org/docs/stable/api/skimage.html#module-skimage)提供了下列skimage实用的函数来转化dtype和data range: `util.img_as_float`、 `util.img_as_ubyte`等。\n",
     "\n",
-    "看一下[用户手册](http://scikit-image.org/docs/stable/user_guide/data_types.html)来了解细节。"
+    "看一下[用户手册](http://scikit-image.org/docs/stable/user_guide/data_types.html)来了解细节。\n",
+    "\n",
+    "### 3.3.2.2 颜色空间\n",
+    "\n",
+    "颜色图像是 (N, M, 3) 或 (N, M, 4) 形状 (当alpha渠道编码为透明度)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768, 1024, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "face = scipy.misc.face()\n",
+    "face.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[skimage.color](http://scikit-image.org/docs/stable/api/skimage.color.html#module-skimage.color)中包含转换不同颜色空间（RGB、HSV、LAB 等）的程序: `color.rgb2hsv`、color.lab2rgb等。检查一下文档字符串了解一下输入图像期望的dtype。\n",
+    "\n",
+    "---\n",
+    "3D 图像\n",
+    "`skimage`的大多数函数可以接受3D图像作为参数。看一些文档字符串确认一下函数是否可以被用于3D图像（例如MRI或CT图像）。\n",
+    "---\n",
+    "\n",
+    "---\n",
+    "练习\n",
+    "\n",
+    "在硬盘上打开一个颜色图像作为Numpy数组。\n",
+    "\n",
+    "找一个图像函数计算图像的直方图，并且打印每个颜色通道的直方图。\n",
+    "\n",
+    "将图像转换为灰度图，打印直方图。\n",
+    "---\n",
+    "\n",
+    "## 3.3.3 图像预处理 / 增强\n",
+    "\n",
+    "目的: 降噪、特征 (边缘) 抽取 ...\n",
+    "\n",
+    "### 3.3.3.1 本地过滤器\n",
+    "\n",
+    "本地过滤器用一个函数替换像素临近像素的值。这个函数可以是线性或非线性的。\n",
+    "\n",
+    "临近: 方块 (选择大小)、磁盘、或更复杂的结构化元素。\n",
+    "\n",
+    "![](http://www.scipy-lectures.org/_images/kernels1.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
