更新2.2. 高级Numpy，根据原文修改内容调整

--- a/2.2. 高级Numpy.ipynb
+++ b/2.2. 高级Numpy.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -466,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wav_header_dtype = np.dtype([\n",
@@ -584,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wav_header_dtype = np.dtype(dict(\n",
@@ -1141,7 +1147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = x.view([('r', 'i1'),\n",
@@ -2318,7 +2326,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "as_strided(x[0, 1:], shape=(2, ), strides=((3+1)*x.itemsize, ))"
@@ -2327,7 +2337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "as_strided(x[1:, 0], shape=(2, ), strides=((3+1)*x.itemsize, ))"
@@ -2413,7 +2425,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.arange(5*5*5*5).reshape(5,5,5,5)\n",
@@ -4115,7 +4129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(np.__file__)"
